Finish TodoList Model

--- a/imobiles/Base.lproj/Main.storyboard
+++ b/imobiles/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="imobiles" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MainView" id="BYZ-38-t0r" customClass="ViewController" customModule="imobiles" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -34,6 +34,9 @@
                                 <state key="normal" title="CheckList">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="TodoList:" destination="BYZ-38-t0r" eventType="touchUpInside" id="62z-lG-xxa"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -176,7 +179,7 @@
         <!--Todo List-->
         <scene sceneID="nED-uq-tUZ">
             <objects>
-                <tableViewController id="zMe-AN-NI0" customClass="TodoViewController" customModule="TodoList" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="zMe-AN-NI0" customClass="TodoViewController" customModule="imobiles" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="4bh-rN-OaV">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -197,7 +200,11 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Todo List" id="Ixf-A1-PXZ">
-                        <barButtonItem key="leftBarButtonItem" title="Main" style="plain" id="hPC-jE-wNA"/>
+                        <barButtonItem key="leftBarButtonItem" title="Main" id="hPC-jE-wNA">
+                            <connections>
+                                <action selector="MainViewButton:" destination="zMe-AN-NI0" id="HoE-b1-Z8V"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="1pD-4R-WAq">
                             <connections>
                                 <action selector="addButtonPressed:" destination="zMe-AN-NI0" id="ErQ-Tv-OLV"/>
@@ -207,12 +214,12 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qaE-o3-oBf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3983" y="-1789"/>
+            <point key="canvasLocation" x="3836" y="-1827"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rJI-DH-JiL">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="r5x-2Y-Whi" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="TodoList" automaticallyAdjustsScrollViewInsets="NO" id="r5x-2Y-Whi" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="vax-GB-5o5">
                         <rect key="frame" x="0.0" y="20" width="375" height="96"/>
@@ -225,7 +232,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9Yb-6u-fYS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3044" y="-1789"/>
+            <point key="canvasLocation" x="2898" y="-1827"/>
         </scene>
     </scenes>
     <resources>
