--- a/imobiles/Base.lproj/Main.storyboard
+++ b/imobiles/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,41 +19,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9xr-mZ-byu">
-                                <rect key="frame" x="90" y="309.5" width="195" height="48"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="Quick QR Scan">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y15-SZ-i0q">
+                                <rect key="frame" x="204" y="280" width="154" height="163"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="154" id="b2x-1o-Qrs"/>
+                                </constraints>
+                                <state key="normal" image="focus"/>
                                 <connections>
-                                    <action selector="QRScan:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NyA-fC-20v"/>
+                                    <action selector="QRScan:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Z1d-6S-cHV"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="db8-GI-9qx">
-                                <rect key="frame" x="89.5" y="383" width="195" height="48"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <state key="normal" title="CheckList">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" image="Asset 1" translatesAutoresizingMaskIntoConstraints="NO" id="xP2-Jo-hEt">
+                                <rect key="frame" x="51" y="40" width="272" height="104"/>
+                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="104" id="J2t-Is-WHu"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iPd-8K-1at">
+                                <rect key="frame" x="16" y="280" width="180" height="163"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="163" id="Fua-NN-Wbf"/>
+                                </constraints>
+                                <state key="normal" image="fill_form-512"/>
                                 <connections>
-                                    <action selector="TodoList:" destination="BYZ-38-t0r" eventType="touchUpInside" id="62z-lG-xxa"/>
+                                    <action selector="TodoList:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SOd-lM-U7W"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="db8-GI-9qx" firstAttribute="width" secondItem="9xr-mZ-byu" secondAttribute="width" id="FsX-pn-nje"/>
-                            <constraint firstItem="db8-GI-9qx" firstAttribute="top" secondItem="9xr-mZ-byu" secondAttribute="bottom" constant="25.5" id="Nyr-eu-Vbj"/>
-                            <constraint firstItem="db8-GI-9qx" firstAttribute="centerX" secondItem="9xr-mZ-byu" secondAttribute="centerX" id="QfP-um-f7q"/>
-                            <constraint firstItem="9xr-mZ-byu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dZD-V8-aMT"/>
-                            <constraint firstItem="9xr-mZ-byu" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="prr-Mk-qJM"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="y15-SZ-i0q" secondAttribute="trailing" constant="17" id="1Mj-AU-41n"/>
+                            <constraint firstItem="xP2-Jo-hEt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="1QA-dK-73D"/>
+                            <constraint firstItem="xP2-Jo-hEt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AU4-Kf-muc"/>
+                            <constraint firstItem="iPd-8K-1at" firstAttribute="bottom" secondItem="y15-SZ-i0q" secondAttribute="bottom" id="K4Y-OG-4UB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="iPd-8K-1at" secondAttribute="bottom" constant="224" id="Ns7-g8-An9"/>
+                            <constraint firstItem="y15-SZ-i0q" firstAttribute="leading" secondItem="iPd-8K-1at" secondAttribute="trailing" constant="8" id="ckP-uT-6hn"/>
+                            <constraint firstItem="iPd-8K-1at" firstAttribute="top" secondItem="y15-SZ-i0q" secondAttribute="top" id="saB-u9-vxG"/>
+                            <constraint firstItem="iPd-8K-1at" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="uIN-gb-QgH"/>
+                            <constraint firstItem="xP2-Jo-hEt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="51" id="xF9-qU-qUC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2556" y="-803"/>
+            <point key="canvasLocation" x="2552.4737631184412" y="-807.20000000000005"/>
         </scene>
         <!--Code View Controller-->
         <scene sceneID="0zS-Yw-k1L">
@@ -82,9 +94,6 @@
                                 <state key="normal" title="Back to Main">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
-                                <connections>
-                                    <segue destination="BYZ-38-t0r" kind="presentation" animates="NO" id="JfQ-J7-4Z0"/>
-                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.90196078430000004" green="0.36470588240000001" blue="0.2784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -236,7 +245,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Asset 1" width="678" height="340"/>
         <image name="cross" width="40" height="40"/>
+        <image name="fill_form-512" width="512" height="512"/>
         <image name="focus" width="150" height="150"/>
     </resources>
 </document>
